<resources>
    <string name="app_name">WidgetDemo</string>
    <string name="hello">选择你最喜欢的课程</string>
    <string name="music">音乐</string>
    <string name="gym">体育</string>
    <string name="dance">舞蹈</string>
    <string name="reading">阅读</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
</resources>
