<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/radiohello"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center_vertical"
        android:text="@string/hello"
        android:textColor="#009688" />

    <RadioGroup
        android:id="@+id/radopgroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radiobutton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:button="@drawable/btn_image"
            android:gravity="center"
            android:text="@string/music" />

        <RadioButton
            android:id="@+id/radiobutton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:button="@null"
            android:drawableRight="@drawable/bluewater"
            android:drawablePadding="0dp"
            android:text="@string/gym" />
        <RadioButton
            android:id="@+id/radiobutton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/dance" />
        <RadioButton
            android:id="@+id/radiobutton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/reading" />


    </RadioGroup>

</LinearLayout>